--- a/TipCalc/app/src/main/AndroidManifest.xml
+++ b/TipCalc/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.css.converter">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="edu.css.tipcalc">
 
     <application
         android:allowBackup="true"
